--- a/3d-room-planner/example/css/bootstrap.css
+++ b/3d-room-planner/example/css/bootstrap.css
@@ -1410,7 +1410,7 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #333;
+  color: #ffff;
   background-color: #fff;
 }
 
